--- a/examples/Helloworld/HelloGeometry.html
+++ b/examples/Helloworld/HelloGeometry.html
@@ -10,6 +10,7 @@
     window.Try3d = Try3d;
 </script>
 <script src="../helpers.js"></script>
+<script src="./MeshData.js"></script>
 <body>
 <div style="width: 100%;height: 100%;position:fixed;margin: 0px;padding: 0px;left: 0px;top: 0px;margin: 0px;">
     <canvas id="canvas" style="padding: 0px;margin: 0px;position:absolute;left: 0px;top: 0px;background-color: aliceblue" tabindex="0"></canvas>
@@ -18,7 +19,7 @@
 
     // 创建场景对象(渲染器至少包含一个scene,否则,将什么事情都不做)
     let scene = new Try3d.Scene({cavnas:document.getElementById('canvas')});
-    scene.getCanvas().setClearColor(1.0, 1.0, 1.0, 1.0);
+    scene.getCanvas().setClearColor(0.3, 0.3, 0.3, 1.0);
     // 内置ColorDef
     let colorDef = Try3d.MaterialDef.parse(Try3d.Internal.S_COLOR_DEF_DATA);
 
@@ -29,11 +30,30 @@
     // Geometry是所有渲染实例的基类
     // 一个Geometry包含渲染所需的Mesh与渲染Mesh指定的Material
     // 定义一个Geometry
+    let geometry = new Try3d.Geometry(scene, {id:'geometry'});
+    // 定义mesh
+    let mesh = new Try3d.Mesh();
+    mesh.setData(Try3d.Mesh.S_POSITIONS, positions);
+    mesh.setData(Try3d.Mesh.S_NORMALS, normals);
+    mesh.setData(Try3d.Mesh.S_INDICES, indices);
+    mesh.setPrimitive(Try3d.Mesh.S_PRIMITIVE_LINES);
+    geometry.setMesh(mesh);
+    geometry.updateBound();
+    // 定义material
+    let material = new Try3d.Material(scene, {id:'material', materialDef:Try3d.MaterialDef.parse(Try3d.Internal.S_BASIC_LIGHTING_DEF_DATA)});
+    material.setParam('ambientColor', new Try3d.Vec4Vars().valueFromXYZW(0.2, 0.2, 0.2, 1.0));
+    material.setParam('diffuseColor', new Try3d.Vec4Vars().valueFromXYZW(0.2, 1.0, 0.5, 1.0));
+    material.setParam('specularColor', new Try3d.Vec4Vars().valueFromXYZW(0.8, 0.8, 0.8, 1.0));
+    geometry.setMaterial(material);
+
+    // 加入场景图
+    rootNode.addChildren(geometry);
 
     // 创建一个控制器
     let sceneControl = new Try3d.SceneBrowsingController(scene, {id:'control'});
     sceneControl.lookScene(rootNode);
-    initOther(scene, rootNode);
+    initOther(scene, rootNode, [0.3, 0.3, 0.3, 1.0], [1.0, 1.0, 1.0, 1.0]);
+    initDirLight(scene, rootNode);
 
 
     // 创建渲染器
