--- a/examples/Helloworld/HelloMaterial.html
+++ b/examples/Helloworld/HelloMaterial.html
@@ -4,18 +4,30 @@
     <meta charset="UTF-8">
     <title>HelloMaterial</title>
 </head>
-<script src="../../build/try3d.min.js"></script>
+<!--<script src="../../build/try3d.min.js"></script>-->
+<script type="module">
+    import Try3d from "../../src/Try3d.js";
+    window.Try3d = Try3d;
+</script>
 <script src="../helpers.js"></script>
+<script src="./../dat.gui.min.js"></script>
 <body>
 <div style="width: 100%;height: 100%;position:fixed;margin: 0px;padding: 0px;left: 0px;top: 0px;margin: 0px;">
     <canvas id="canvas" style="padding: 0px;margin: 0px;position:absolute;left: 0px;top: 0px;background-color: aliceblue" tabindex="0"></canvas>
+    <div style="position: fixed;left: 0px;bottom: 0px;margin-left: 5px;">
+        <span><img src="../Assets/Textures/pond/Pond_COLOR.png" width="128" height="128"><div style="text-align: center;width: 128px;color: white">colorMap</div></span>
+        <span><img src="../Assets/Textures/pond/Pond_NRM.png" width="128" height="128"><div style="text-align: center;width: 128px;color: white">normalMap</div></span>
+        <span><img src="../Assets/Textures/pond/Pond_OCC.png" width="128" height="128"><div style="text-align: center;width: 128px;color: white">occlusionMap</div></span>
+        <span><img src="../Assets/Textures/pond/Pond_SPEC.png" width="128" height="128"><div style="text-align: center;width: 128px;color: white">specularMap</div></span>
+    </div>
 </div>
 <script type="module">
 
     // 创建场景对象(渲染器至少包含一个scene,否则,将什么事情都不做)
     let scene = new Try3d.Scene({cavnas:document.getElementById('canvas')});
     scene.getRender().setGammaFactor(1.0);
-    scene.getCanvas().setClearColor(1.0, 1.0, 1.0, 1.0);
+    scene.getRender().setGammaFactor(1.0);
+    scene.getCanvas().setClearColor(0.12, 0.12, 0.12, 1.0);
     // 内置ColorDef
     let colorDef = Try3d.MaterialDef.parse(Try3d.Internal.S_COLOR_DEF_DATA);
 
@@ -23,57 +35,92 @@
     let rootNode = new Try3d.Node(scene, {id:'rootNode'});
     scene.addSceneNode(rootNode);
 
-    // 地板
-    let floor = new Try3d.GroupPlane(scene, {id:'floor', xSize:10, zSize:10, xSegments:10, zSegments:10, xRepeat:true, zRepeat:true});
-    let floorMat = new Try3d.Material(scene, {id:'floorMat', materialDef:colorDef});
-    let floorTexture = new Try3d.Texture2DVars(scene);
-    floorTexture.setImageSrc(scene, '../Assets/Textures/stones.jpg');
-    floorMat.setParam('colorMap', floorTexture);
-    floor.setMaterial(floorMat);
-    floor.setLocalTranslationXYZ(0, 0.1, 0);
-    rootNode.addChildren(floor);
-
-    // wall
-    let wall = new Try3d.Box(scene, {id:'wall', xHalf:0.1, yHalf:2, zHalf:5});
-    let wallMat = new Try3d.Material(scene, {id:'wallMat', materialDef:colorDef});
-    let wallTexture = new Try3d.Texture2DVars(scene);
-    wallTexture.setImageSrc(scene, '../Assets/Textures/wall.jpg');
-    wallMat.setParam('colorMap', wallTexture);
-    wall.setMaterial(wallMat);
-    wall.setLocalTranslationXYZ(-2, 2, 0);
-    rootNode.addChildren(wall);
-
-    // ball
-    let ball = new Try3d.Sphere(scene, {id:'ball', radius:1});
-    let ballMat = new Try3d.Material(scene, {id:'ballMat', materialDef:colorDef});
-    let ballTexture = new Try3d.Texture2DVars(scene);
-    ballTexture.setImageSrc(scene, '../Assets/Textures/water.jpg');
-    ballMat.setParam('colorMap', ballTexture);
-    ball.setMaterial(ballMat);
-    ball.setLocalTranslationXYZ(1, 1, 1);
+    // 一些测试shape
+    let ball = new Try3d.Sphere(scene, {id:'ball', radius:0.7, widthSegments:25, heightSegments:25, widthUVScale:0.25, heightUVScale:0.25});
+    let mat = new Try3d.Material(scene, {id:'mat', materialDef:Try3d.MaterialDef.load('../../src/Core/Assets/MaterialDef/Light/BasicLightingDef')});
+    ball.setMaterial(mat);
     rootNode.addChildren(ball);
+    let box = new Try3d.Box(scene, {id:'box', xHalf:0.5, yHalf:0.5, zHalf:0.5});
+    box.setMaterial(mat);
+    let cylinder = new Try3d.Cylinder(scene, {id:'cylinder', radiusTop:0.5, radiusBottom:0.5, height:1.5});
+    cylinder.setMaterial(mat);
+    let shapes = {
+        'ball':ball,
+        'box':box,
+        'cylinder':cylinder
+    };
 
-    // 一堆箱子
-    let boxMat = new Try3d.Material(scene, {id:'boxMat', materialDef:colorDef});
-    let boxTexture = new Try3d.Texture2DVars(scene);
-    boxTexture.setImageSrc(scene, '../Assets/Textures/container2.png');
-    boxMat.setParam('colorMap', boxTexture);
-    for(let i = 0, x = 0, y = 0, z = 0;i < 10;i++){
-        x = Math.random() * 1.5 + 2;
-        y = i * 0.7;
-        z = Math.random() * 1.5 + 2;
-        let box = new Try3d.Box(scene, {id:'box_' + i, xHalf:0.5, yHalf:0.5, zHalf:0.5});
-        box.setLocalTranslationXYZ(x, y, z);
-        box.setMaterial(boxMat);
-        rootNode.addChildren(box);
-    }
+    // textureMap
+    let colorMap = new Try3d.Texture2DVars(scene);
+    colorMap.setImageSrc(scene, "../Assets/Textures/pond/Pond_COLOR.png");
+    let nrmMap = new Try3d.Texture2DVars(scene);
+    nrmMap.setImageSrc(scene, "../Assets/Textures/pond/Pond_NRM.png");
+    let occMap = new Try3d.Texture2DVars(scene);
+    occMap.setImageSrc(scene, "../Assets/Textures/pond/Pond_OCC.png");
+    let specMap = new Try3d.Texture2DVars(scene);
+    specMap.setImageSrc(scene, "../Assets/Textures/pond/Pond_SPEC.png");
+    // matParams
+    mat.setParam('diffuseMap', colorMap);
+    mat.setParam('normalMap', nrmMap);
+    mat.setParam('lightMap', occMap);
+    mat.setParam('specularMap', specMap);
 
     // 创建一个控制器
     let sceneControl = new Try3d.SceneBrowsingController(scene, {id:'control'});
     sceneControl.lookScene(rootNode);
-    sceneControl.setTargetDistance(10);
-    initOther(scene, rootNode);
+    sceneControl.setMaxDistance(5);
+    sceneControl.setMinDistance(2);
+    sceneControl.setTargetDistance(3);
+    initDirLight(scene, rootNode, [0.9, 0.9, 0.99, 1.0]);
 
+    // gui
+    // 使用dat gui
+    let gui = new dat.GUI();
+    let currentShape = 'ball';
+    let settings = {
+        shape:currentShape,
+        colorMap: true,
+        normalMap: true,
+        occlusionMap: true,
+        specularMap: true,
+    };
+    gui.add(settings, 'shape', ['ball', 'box', 'cylinder']).onChange(function(value) {
+        rootNode.removeChildren(rootNode.getChildrenAtName(currentShape));
+        rootNode.addChildren(shapes[value]);
+        currentShape = value;
+    });
+    gui.add(settings, 'colorMap').onChange(function(value) {
+        if(value){
+            mat.setParam('diffuseMap', colorMap);
+        }
+        else{
+            mat.clearParams('diffuseMap');
+        }
+    });
+    gui.add(settings, 'normalMap').onChange(function(value) {
+        if(value){
+            mat.setParam('normalMap', nrmMap);
+        }
+        else{
+            mat.clearParams('normalMap');
+        }
+    });
+    gui.add(settings, 'occlusionMap').onChange(function(value) {
+        if(value){
+            mat.setParam('lightMap', occMap);
+        }
+        else{
+            mat.clearParams('lightMap');
+        }
+    });
+    gui.add(settings, 'specularMap').onChange(function(value) {
+        if(value){
+            mat.setParam('specularMap', specMap);
+        }
+        else{
+            mat.clearParams('specularMap');
+        }
+    });
 
     // 创建渲染器
     let renderEngine = new Try3d.RenderEngine();
