--- a/examples/Helloworld/HelloLight.html
+++ b/examples/Helloworld/HelloLight.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <title>HelloLight</title>
 </head>
-<script src="../../build/try3d.min.js"></script>
+<!--<script src="../../build/try3d.min.js"></script>-->
+<script type="module">
+    import Try3d from '../../src/Try3d.js';
+    window.Try3d = Try3d;
+</script>
 <script src="../helpers.js"></script>
+<script src="./../dat.gui.min.js"></script>
 <body>
     <div style="width: 100%;height: 100%;position:fixed;margin: 0px;padding: 0px;left: 0px;top: 0px;margin: 0px;">
         <canvas id="canvas" style="padding: 0px;margin: 0px;position:absolute;left: 0px;top: 0px;background-color: aliceblue" tabindex="0"></canvas>
@@ -14,7 +19,7 @@
 
         // 创建场景对象(渲染器至少包含一个scene,否则,将什么事情都不做)
         let scene = new Try3d.Scene({cavnas:document.getElementById('canvas')});
-        scene.getCanvas().setClearColor(1.0, 1.0, 1.0, 1.0);
+        scene.getCanvas().setClearColor(0.12, 0.12, 0.12, 1.0);
         // 内置ColorDef
         let colorDef = Try3d.MaterialDef.parse(Try3d.Internal.S_COLOR_DEF_DATA);
 
@@ -22,23 +27,40 @@
         let rootNode = new Try3d.Node(scene, {id:'rootNode'});
         scene.addSceneNode(rootNode);
 
-        // wall
-        let wall = new Try3d.GroupPlane(scene, {id:'wall', xSize:5, zSize:2});
-        let wallMat = new Try3d.Material(scene, {id:'wallMat', materialDef:colorDef});
-        wall.setMaterial(wallMat);
-        let wallMap = new Try3d.Texture2DVars(scene);
-        wallMap.setImageSrc(scene, '../Assets/Textures/wall.jpg');
-        wallMat.setParam('colorMap', wallMap);
-        wall.setLocalRotationFromEuler(Try3d.MoreMath.toRadians(90), Try3d.MoreMath.toRadians(90), 0);
-        rootNode.addChildren(wall);
+        let gltfLoader = new Try3d.GLTFLoader();
+        gltfLoader.load(scene, '../Assets/Models/GLTF/Statue/scene.gltf', modelNode=>{
+            // modelNode.setLocalRotationFromEuler(Try3d.MoreMath.toRadians(-90), 0, 0);
+            rootNode.addChildren(modelNode);
 
-        // 创建一个控制器
-        let sceneControl = new Try3d.SceneBrowsingController(scene, {id:'control'});
-        sceneControl.lookScene(rootNode);
-        sceneControl.setTargetDistance(2);
-        sceneControl.setMinDistance(2);
-        sceneControl.setMaxDistance(2);
-        initOther(scene, rootNode);
+            // 创建一个控制器
+            let sceneControl = new Try3d.SceneBrowsingController(scene, {id:'control'});
+            sceneControl.lookScene(rootNode);
+            // sceneControl.setTargetDistance(25);
+            sceneControl.setMinVerticalRotation(Try3d.MoreMath.toRadians(-1));
+
+            // 创建一个directionalLight
+            let dirLight = new Try3d.DirectionalLight(scene, {id:'dirLight'});
+            dirLight.setDirectionXYZ(-1, -1, 1);
+            dirLight.setColorRGBA(1.0, 1.0, 1.0, 1.0);
+            // 添加雾化
+            initFog(scene, 5, 80, [0.12, 0.12, 0.12, 1.0]);
+            rootNode.addChildren(dirLight);
+
+
+            // gui
+            // 使用dat gui
+            let gui = new dat.GUI();
+            let settings = {
+                x: -1,
+                z: 1,
+            };
+            gui.add(settings, 'x', -1, 1).step(0.1).onChange(function(value) {
+                dirLight.setDirectionXYZ(value, -1, settings.z);
+            });
+            gui.add(settings, 'z', -1, 1).step(0.1).onChange(function(value) {
+                dirLight.setDirectionXYZ(settings.x, -1, value);
+            });
+        }, {batch:false});
 
 
         // 创建渲染器
