--- a/examples/Shadows/PointLightShadowTest.html
+++ b/examples/Shadows/PointLightShadowTest.html
@@ -74,8 +74,15 @@
         window.giProbe.setPositionFromXYZ(0, 5, 0);
         let envCapture = ProbeTools.bakeGIProbe(scene, window.giProbe, {resolute:128});
     });
+    let pointLight = new PointLight(scene, {id:'pointLight2'});
+    pointLight.setRadius(8.0);
+    pointLight.setColorRGBA(0.5, 0.5, 0.5, 1.0);
+    pointLight.setPositionXYZ(7, 2, 2);
+    // pointLight.debugShadowMap();
+    pointLight.proShadow(true);
+    rootNode.addChildren(pointLight);
 
-    let pointLight = new PointLight(scene, {id:'pointLight'});
+    pointLight = new PointLight(scene, {id:'pointLight'});
     pointLight.setRadius(8.0);
     pointLight.setColorRGBA(0.5, 0.5, 0.5, 1.0);
     pointLight.setPositionXYZ(-7, 2, 0);
