--- a/examples/Shadows/DirectionalLightShadow.html
+++ b/examples/Shadows/DirectionalLightShadow.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>DirecationLightShadow</title>
+    <title>DirectionalLightShadow</title>
 </head>
 <body>
 <script src="../../build/try3d.min.js"></script>
