完善core pipeline,增加Materials案例

--- a/examples/Materials/PrincipledMaterial.html
+++ b/examples/Materials/PrincipledMaterial.html
@@ -16,7 +16,7 @@
         import Ext from "../Ext.js";
 
         let ext = new Ext();
-        ext.show('  这个例子演示了PrincipledMaterial的标准MetallicPipeline,在该Pipeline下,由baseColorMap,roughnessMap,metallicMap以及normalMap,aoMap是可选的,通常包含烘培的光照信息。', {lineheight:50});
+        ext.show('  这个例子演示了PrincipledMaterial的标准MetallicPipeline(金属工作流),在该Pipeline下,由baseColorMap,roughnessMap,metallicMap以及normalMap描述,aoMap是可选的,通常包含烘培的光照信息。', {lineheight:50});
         // 创建场景对象(渲染器至少包含一个scene,否则,将什么事情都不做)
 
         let scene = new Try3d.Scene({cavnas:document.getElementById('canvas')});
