--- a/examples/Test.html
+++ b/examples/Test.html
@@ -8,12 +8,12 @@
     <!--<canvas id="canvas" width="512" height="512"></canvas>-->
     <span><img src="./Assets/Textures/pond/Pond_NRM.png" width="128" height="128"><div style="text-align: center;width: 128px;color: white">sdsd</div></span>
     <script type="module">
-        // let arr = ['color','get','test'];
-        // var newArr = arr.sort(function(a,b){return a.localeCompare(b)});
-        // console.log("newArr:" + newArr);
-        // arr = ['test','color','get'];
-        // var newArr = arr.sort(function(a,b){return a.localeCompare(b)});
-        // console.log("newArr:" + newArr);
+        let arr = ['color','get','test'];
+        var newArr = arr.sort(function(a,b){return a.localeCompare(b)});
+        console.log("newArr:" + newArr);
+        arr = ['test','color','get'];
+        var newArr = arr.sort(function(a,b){return a.localeCompare(b)});
+        console.log("newArr:" + newArr);
         //
         // let s1 = /color/;
         // let s2 = /colorMap/;
