--- a/examples/Optimizations/OctreeCulling2.html
+++ b/examples/Optimizations/OctreeCulling2.html
@@ -8,11 +8,7 @@
 <div style="width: 100%;height: 100%;position:fixed;left: 0px;top: 0px;">
     <canvas id="canvas" style="position:absolute;left: 0px;top: 0px;margin: 0px;padding: 0px;" tabindex="0"></canvas>
 </div>
-<!--<script src="../../build/try3d.js"></script>-->
-<script type="module">
-    import Try3d from '../../src/Try3d.js';
-    window.Try3d = Try3d;
-</script>
+<script src="../../build/try3d.js"></script>
 <script src="./../dat.gui.min.js"></script>
 <script type="module">
     import Stats from '../stats.min.js';
